--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@azure/msal-node": "^2.1.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "axios": "^1.9.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
